[package]
name = "gisture"
version = "0.1.0"
edition = "2018"

[dependencies]
cacache = "9.0.0"
chrono = "0.4.19"
clap = "2.33.3"
colored = "2.0.0"
futures = "0.3.17"
handlebars = "4.1.3"
html-escape = "0.2.9"
html-minifier = "3.0.14"
lol_html = "0.3.0"
once_cell = "1.8.0"
portpicker = "0.1.1"
pulldown-cmark = "0.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sitemap = "0.4.1"
syntect = "4.6.0"
tokio = { version = "1.12.0", features = ["full"] }
ureq = { version = "*", features = ["json"] }
warp = "0.3.1"

[profile.release]
lto = "thin"
panic = "abort"
